--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Task</h1>
 
-<%= render 'form', task: @task %>
+<% if current_user.admin? %>
+    <%= render 'form', task: @task %>
+<% else %>
+    <%= render 'user_task_update_form', task: @task %>
+<% end %>
 
 <%= link_to 'Show', @task %> |
 <%= link_to 'Back', tasks_path %>
