--- a/app/views/tasks/_user_task_update_form.html.erb
+++ b/app/views/tasks/_user_task_update_form.html.erb
@@ -1,18 +1,20 @@
 <% users = []; for i in (0..@users.length); users.append(@users[i]); end %>
+
 <%= simple_form_for(@task) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
     <%= f.input :subject, disabled: true %>
-    <%= f.input :assigne, collection: users, disabled: true %>
+    <%= f.input :assigne, disabled: true %>
     <% if not ["In Review", "Done"].include?(@task.status) %>
         <%= f.input :status, collection: ["To Do", "In Progress", "In Review"] %>
     <% else %>
         <%= f.input :status, disabled: true %>
     <% end %>
+    
     <%= f.input :description, disabled: true %>
-    <%= f.input :created_by, input_html: {value: current_user}, disabled: true %>
+    <%= f.input :created_by, disabled: true %>
   </div>
 
   <div class="form-actions">
