--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <% if current_user %>
-<%= link_to "Tasks", tasks_path %>
+    <div class="text-center">
+        <h1><%= link_to "Tasks", tasks_path %></h1>
+    </div>
 <% end %>
