--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="navbar-header">
       <%= link_to 'Task Manager', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Dashboard', '/dashboard' %>
     </div>
     <div id="navbar">
   
     <ul class="nav navbar-nav pull-right">
-      <li><% link_to 'Home', root_path %></li>
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
         <li><%= current_user.username %></li>
