--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -6,7 +6,7 @@
       <th><strong>Assigne</strong></th>
       <th><strong>Status</strong></th>
       <th><strong>Created by</strong></th>
-      <th><strong>Created at</strong></th>
+      <th><strong>Last update</strong></th>
       <th><strong>Methods</strong></th>
     </tr>
   </thead>
