--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,8 @@
     <div class="text-center">
         <h1><%= link_to "Tasks", tasks_path %></h1>
     </div>
+<% else %>
+    <div class="text-center">
+        <p><%= link_to 'Log In', new_user_session_path %> or <%= link_to 'Sign Up', new_user_registration_path %> to get started.</p>
+    </div>
 <% end %>
