--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,8 @@
 <li>
   <%= comment.text %> -
   <small>Submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.commenter %></small>
-  <%= link_to 'Edit', edit_task_comment_path(@task, comment) %>
+  <%= link_to 'Edit', edit_task_comment_path(@task, comment) %> |
+  <%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
 
   <%= simple_form_for [comment, Comment.new] do |f| %>
     <div class='form-inputs'>
