refs for users and tasks was added; user edit functionality was added

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,3 +7,7 @@
     <p><%= render 'tasks/tasks', tasks: @tasks %></p>
   </div>
 </div>
+
+<div class="text-center">
+  <h2><%= link_to 'New Task', new_task_path %></h2>
+</div>
