--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<% users = []; for i in (0..@users.length); users.append(@users[i]); end %>
+<% users = []; for user in @users; users.append(user.username); end %>
 
 <%= simple_form_for(@task) do |f| %>
   <%= f.error_notification %>
@@ -6,7 +6,7 @@
 
   <div class="form-inputs">
     <%= f.input :subject %>
-    <%= f.input :assigne, collection: users %>
+    <%= f.input :assigne, collection: users, selected: 1 %>
     <%= f.input :status, collection: ["To Do", "In Progress", "In Review", "Done"], selected: 1 %>
     <%= f.input :description %>
     <%= f.input :created_by, input_html: {value: current_user}, readonly: true %>
