--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,7 @@
 <ul>
   <%= render 'tasks', tasks: @tasks %>
 </ul>
+
+<div class="text-center">
+  <h2><%= link_to 'New Task', new_task_path %></h2>
+</div>
