--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -14,7 +14,7 @@
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.subject %></td>
-        <td><%= link_to task.assigne, edit_user_path(task.user_id) %></td>
+        <td><%= link_to task.assignee, edit_user_path(task.user_id) %></td>
         <td><%= task.status %></td>
         <td><%= task.created_by %></td>
         <td><%= task.created_at %></td>
