--- a/app/views/tasks/_user_task_update_form.html.erb
+++ b/app/views/tasks/_user_task_update_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="form-inputs">
     <%= f.input :subject, disabled: true %>
-    <%= f.input :assigne, disabled: true %>
+    <%= f.input :assignee, disabled: true %>
     <% if not ["In Review", "Done"].include?(@task.status) %>
         <%= f.input :status, collection: ["To Do", "In Progress", "In Review"] %>
     <% else %>
