--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,6 +10,7 @@
     <%= f.input :status, collection: ["To Do", "In Progress", "In Review", "Done"], selected: 1 %>
     <%= f.input :description %>
     <%= f.input :created_by, input_html: {value: current_user}, readonly: true %>
+    <%= f.input :type, collection: ["Issue", "Story"], selected: 1 %>
   </div>
 
   <div class="form-actions">
