--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
       <% if current_user and current_user.admin %>
         <%= link_to 'Dashboard', '/dashboard', class: 'navbar-brand' %>
       <% end %>
+      <%= link_to 'SQL Test', '/sql', class: 'navbar-brand' %>
     </div>
     <div id="navbar">
   
